// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-radio-beta #render should render component as expected (1) 1`] = `
<gux-form-field-radio-group-beta>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-legend-label gux-screenreader">
        <slot name="group-label"></slot>
      </legend>
      <span aria-hidden="true" class="gux-above gux-form-field-legend-label" role="presentation">
        Pizza
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </span>
      <slot></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="group-error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help"></slot>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input name="food-1" slot="input" type="radio" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-beta #render should render component as expected (2) 1`] = `
<gux-form-field-radio-group-beta>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-legend-label gux-screenreader">
        <slot name="group-label"></slot>
        <gux-screen-reader-beta>
          Subject to availibility
        </gux-screen-reader-beta>
      </legend>
      <span aria-hidden="true" class="gux-above gux-form-field-legend-label" role="presentation">
        Pizza
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </span>
      <slot></slot>
      <div class="gux-form-field-error gux-show">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="group-error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help"></slot>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input name="food-1" slot="input" type="radio" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input disabled="" name="food-1" slot="input" type="radio" value="sandwich">
    <label slot="label">
      Sandwich
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input name="food-1" slot="input" type="radio" value="spaghetti">
    <label slot="label">
      Spaghetti
    </label>
    <span slot="help">
      This is a help message
    </span>
  </gux-form-field-radio>
  <span slot="group-error">
    Subject to availibility
  </span>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-beta #render should render component as expected (3) 1`] = `
<gux-form-field-radio-group-beta>
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-legend-label gux-screenreader">
        <slot name="group-label"></slot>
        <gux-screen-reader-beta>
          This is a group help message
        </gux-screen-reader-beta>
      </legend>
      <span aria-hidden="true" class="gux-above gux-form-field-legend-label" role="presentation">
        Pizza
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </span>
      <slot></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="group-error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help gux-show">
        <div class="gux-message">
          <slot name="group-help"></slot>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input name="food-1" slot="input" type="radio" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input disabled="" name="food-1" slot="input" type="radio" value="sandwich">
    <label slot="label">
      Sandwich
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input name="food-1" slot="input" type="radio" value="sushi">
    <label slot="label">
      Sushi
    </label>
    <span slot="error">
      Subject to availibility
    </span>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input name="food-1" slot="input" type="radio" value="spaghetti">
    <label slot="label">
      Spaghetti
    </label>
    <span slot="help">
      This is a help message
    </span>
  </gux-form-field-radio>
  <span slot="group-help">
    This is a group help message
  </span>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-beta #render should render component as expected (4) 1`] = `
<gux-form-field-radio-group-beta disabled="">
  <mock:shadow-root>
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-legend-label gux-screenreader">
        <slot name="group-label"></slot>
      </legend>
      <span aria-hidden="true" class="gux-above gux-form-field-legend-label" role="presentation">
        Pizza
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
      </span>
      <slot></slot>
      <div class="gux-form-field-error">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-message">
          <slot name="group-error"></slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help"></slot>
        </div>
      </div>
    </fieldset>
  </mock:shadow-root>
  <label slot="group-label">
    Food
    <gux-form-field-radio>
      <input name="food-1" slot="input" type="radio" value="pizza">
      <label slot="label">
        Pizza
      </label>
    </gux-form-field-radio>
    <gux-form-field-radio>
      <input disabled="" name="food-1" slot="input" type="radio" value="sandwich">
      <label slot="label">
        Sandwich
      </label>
    </gux-form-field-radio>
    <gux-form-field-radio>
      <input name="food-1" slot="input" type="radio" value="sushi">
      <label slot="label">
        Sushi
      </label>
      <span slot="error">
        Subject to availibility
      </span>
    </gux-form-field-radio>
    <gux-form-field-radio>
      <input name="food-1" slot="input" type="radio" value="spaghetti">
      <label slot="label">
        Spaghetti
      </label>
      <span slot="help">
        This is a help message
      </span>
    </gux-form-field-radio>
  </label>
</gux-form-field-radio-group-beta>
`;
